src/objects/Member_Dues__c.object
<CustomObject>
    <description>Dues  subscription for member on different categories</description>
    <fields>
        <fullName>Auto_Apply_Due_On_Membership_Types__c</fullName>
        <description>Field to store membership types to be auto applied with the current due</description>
        <globalPicklist>Membership_Type</globalPicklist>
        <inlineHelpText>Select to auto apply dues on membership types</inlineHelpText>
        <label>Auto Apply Due On Membership Types</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Auto_Apply_On_Membership_Types__c</fullName>
        <description>used for development purpose</description>
        <label>Auto Apply On Membership Types</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Dues Category for billing table</description>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Dues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fees</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Default_Billing_Frequency__c</fullName>
        <description>Represents the default billing frequency to the members who have this due.</description>
        <label>Default Billing Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Annual</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Installment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quaterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dependent_Annual_Amount__c</fullName>
        <label>Dependent Annual Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dependent_Monthly__c</fullName>
        <formula>Dependent_Annual_Amount__c /12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dependent Monthly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dependent_Quarterly__c</fullName>
        <formula>Dependent_Annual_Amount__c /4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dependent Quarterly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dependent_Semi_Annual__c</fullName>
        <formula>Dependent_Annual_Amount__c /2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dependent Semi - Annual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Financial Account for crediting the amount charged through the due</description>
        <label>Financial Account</label>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipName>Billing_Table</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inactive_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inactive Flag</description>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Billing_Period_On_SD__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if billing period should get included on statement description</inlineHelpText>
        <label>Include Billing Period On SD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_custom_due__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Due</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Annual_Amount__c</fullName>
        <label>Primary Annual Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Monthly__c</fullName>
        <formula>Primary_Annual_Amount__c  / 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Monthly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Quarterly__c</fullName>
        <formula>Primary_Annual_Amount__c  / 4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Quarterly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Semi_Annual__c</fullName>
        <formula>Primary_Annual_Amount__c /2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Semi-Annual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prorate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Prorate?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spouse_Partner_Annual_Amount__c</fullName>
        <label>Spouse/Partner Annual Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Spouse_Partner_Monthly__c</fullName>
        <formula>Spouse_Partner_Annual_Amount__c /12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spouse/Partner Monthly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Spouse_Partner_Quarterly__c</fullName>
        <formula>Spouse_Partner_Annual_Amount__c /4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spouse/Partner Quarterly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Spouse_Partner_Semi_Annual__c</fullName>
        <formula>Spouse_Partner_Annual_Amount__c/2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spouse/Partner Semi-Annual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Statements_Description__c</fullName>
        <label>Statements Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <globalPicklist>SubType</globalPicklist>
        <label>Subtype</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax_exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <globalPicklist>Type</globalPicklist>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <label>Member Dues</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Due Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Member Dues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BillingDates</fullName>
        <active>true</active>
        <description>Check the start date should not be greater than end date</description>
        <errorConditionFormula>Start_Date__c  &gt;=  End_Date__c</errorConditionFormula>
        <errorMessage>Start-date should not be grater than end-date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>amounts_should_be_postitve</fullName>
        <active>true</active>
        <errorConditionFormula>OR( Dependent_Annual_Amount__c  &lt; 0, Spouse_Partner_Annual_Amount__c &lt; 0, Primary_Annual_Amount__c &lt; 0)</errorConditionFormula>
        <errorMessage>The annual amount should be positive.</errorMessage>
    </validationRules>
</CustomObject>